# sampling-nn-1a8c-claude

./: .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  requirements.txt  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  samples_summary.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: all_consolidated.json  arxiv_candidates.json  sampling_discrete_latent_codes_Gumbel_softmax_categorical_reparameterization_dee_20260615_041223.jsonl  sampling_from_the_distribution_of_intermediate_neural_network_layer_activations__20260615_041111.jsonl  variational_autoencoder_sampling_latent_representation_reparameterization_trick_20260615_041259.jsonl
papers/: README.md
papers/pages/: 1308.3432_bengio2013_estimating_propagating_gradients_stochastic_neurons_manifest.txt  (+3 more)
results/: environment.json  stats_E1_core_mnist.json  stats_E6_core_cifar10.json  summary_E1_core_mnist.csv  summary_E2_sweep.csv  summary_E3_position.csv  summary_E5_robust.csv  summary_E6_core_cifar10.csv
src/: analyze.py  data.py  models.py  run_experiments.py  train.py
(+7 files in other folders)
